[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
axum = "0.8.4"
serde = "1.0.219"
tracing-subscriber = "0.3.20"
reqwest = "0.12"
